# robot

./: .gitignore  Dockerfile  Makefile
docking_ws/src/autonomous_docking/: CMakeLists.txt  package.xml
docking_ws/src/autonomous_docking/config/: nav2_params.yaml  waypoints.yaml
docking_ws/src/autonomous_docking/launch/: docking_simulation.launch.py  full_system.launch.py  view_city.launch.py
docking_ws/src/autonomous_docking/maps/: docking_map.pgm  docking_map.yaml
docking_ws/src/autonomous_docking/rviz/: docking.rviz
docking_ws/src/autonomous_docking/scripts/: battery_manager_node.py  docking_controller_node.py  mission_planner_node.py  navigation_manager_node.py
docking_ws/src/autonomous_docking/worlds/: docking_world.world
